--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,12 @@
  *
  */
 @import "bootstrap";
+
+.jumbotron {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.customFont1 {
+  font-size: 12px;
+}
