--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,108 @@
-<p id="notice"><%= notice %></p>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Online Store</h1>
+    <p>Mission, Vission & Values</p>
+  </div>
+</div>
 
-<h1>Products</h1>
 
-<table>
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Image url</th>
-    <th>Price</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
-  <tbody>
-  <% @products.each do |product| %>
-    <tr>
-      <td><%= product.title %></td>
-      <td><%= product.description %></td>
-      <td><img src=<%= product.image_url %> width='100', height='100'/></td>
-      <td><%= product.price %></td>
-      <td><%= link_to 'Show', product %></td>
-      <td><%= link_to 'Edit', edit_product_path(product) %></td>
-      <td><%= link_to 'Destroy', product, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+  <ul class="navbar-nav">
+    <li class="nav-item ">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Products</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Deals</a>
+    </li>
 
-<br>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact</a>
+    </li>
+  </ul>
+  <ul class="navbar-nav ml-auto">
+    <a class="nav-link" href="#">Your Account</a>
+    <a class="navbar-separator">|</a>
+    <a class="nav-link" href="#"><span class="glyphicon glyphicon-log-in"></span>Cart</a>
 
-<%= link_to 'New Product', new_product_path %>
+
+  </ul>
+</nav>
+
+
+
+<div class="container-fluid text-justify customFont1">
+  <div class="row content">
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-1 sidenav">
+
+    </div>
+
+    <div class="col-sm-10">
+
+
+      <p id="notice"><%= notice %></p>
+
+      <table class="table">
+        <thead>
+        <tr>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Image</th>
+          <th>Price</th>
+          <th colspan="3"></th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <% @products.each do |product| %>
+          <tr>
+            <td style="width: 13%" %><%= product.title %></td>
+            <td style="width: 55%"><%= product.description %></td>
+            <td style="width: 10%"><img src=<%= product.image_url %> width='100', height='100'/></td>
+            <td style="width: 10%"><%= product.price %> €</td>
+            <td style="width: 4%"><%= link_to 'Show', product %></td>
+            <td style="width: 4%"><%= link_to 'Edit', edit_product_path(product) %></td>
+            <td style="width: 4%"><%= link_to 'Destroy', product, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+      <br>
+
+      <%= link_to 'New Product', new_product_path %>
+
+
+    </div>
+
+    <div class="col-sm-1 sidenav">
+
+    </div>
+
+  </div>
+  <div class="row content">
+    <br>
+    <br>
+    <br>
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
