--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,33 @@
 </head>
 
 <body>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Online Store</h1>
+    <p>Mission, Vission & Values</p>
+  </div>
+</div>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item ">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Products</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Deals</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact</a>
+    </li>
+  </ul>
+  <ul class="navbar-nav ml-auto">
+    <a class="nav-link" href="#">Your Account</a>
+    <a class="navbar-separator">|</a>
+    <a class="nav-link" href="#"><span class="glyphicon glyphicon-log-in"></span>Cart</a>
+  </ul>
+</nav>
 <%= yield %>
 </body>
 </html>
