--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,20 @@
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div class="container-fluid text-justify customFont1">
+  <div class="row content">
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-1 sidenav">
+    </div>
+    <div class="col-sm-10 sidenav">
+      <h2>Product change</h2>
+      <%= render 'form', product: @product %>
+      <%= link_to 'Show', @product %> |
+      <%= link_to 'Back', products_path %>
+    </div>
+    <div class="col-sm-1 sidenav">
+    </div>
+  </div>
+  <div class="row content">
+    <br>
+  </div>
+</div>
