--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,19 @@
-<h1>New Product</h1>
-
-<%= render 'form', product: @product %>
-
-<%= link_to 'Back', products_path %>
+<div class="container-fluid text-justify customFont1">
+  <div class="row content">
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-1 sidenav">
+    </div>
+    <div class="col-sm-10 sidenav">
+      <h2>New Product</h2>
+      <%= render 'form', product: @product %>
+      <%= link_to 'Back', products_path %>
+    </div>
+    <div class="col-sm-1 sidenav">
+    </div>
+  </div>
+  <div class="row content">
+    <br>
+  </div>
+</div>
