--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,36 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<div class="container-fluid text-justify customFont1">
+  <div class="row content">
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-1 sidenav">
+    </div>
+    <div class="col-sm-10 sidenav">
+      <h2>Product</h2>
+      <p id="notice"><%= notice %></p>
+      <p>
+        <strong>Title:</strong>
+        <%= @product.title %>
+      </p>
+      <p>
+        <strong>Description:</strong>
+        <%= @product.description %>
+      </p>
+      <p>
+        <strong>Image url:</strong>
+        <%= @product.image_url %>
+      </p>
+      <p>
+        <strong>Price:</strong>
+        <%= @product.price %>
+      </p>
+      <%= link_to 'Edit', edit_product_path(@product) %> |
+      <%= link_to 'Back', products_path %>
+    </div>
+    <div class="col-sm-1 sidenav">
+    </div>
+  </div>
+  <div class="row content">
+    <br>
+  </div>
+</div>
