--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+  <title>Show product</title>
+<% end %>
 <div class="container-fluid text-justify customFont1">
   <div class="row content">
     <br>
