Table ersetz + render

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -9,8 +9,8 @@
     <div class="col-sm-1 sidenav">
     </div>
     <div class="col-sm-10 sidenav">
-      <h2>Product change</h2>
-      <%= render 'form', product: @product %>
+      <h2>Edit Product</h2>
+      <%= render 'shared/form', product: @product %>
       <%= link_to 'Show', @product %> |
       <%= link_to 'Back', products_path %>
     </div>
