--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,37 +8,26 @@
   <div class="row content">
     <div class="col-sm-1 sidenav">
     </div>
-
     <div class="col-sm-10">
-      <p id="notice"><%= notice %></p>
-
-      <table class="table">
-        <thead>
-        <tr>
-          <th>Title</th>
-          <th>Description</th>
-          <th>Image</th>
-          <th>Price</th>
-          <th colspan="3"></th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <% @products.each do |product| %>
-          <tr>
-            <td style="width: 13%" %><%= product.title %></td>
-            <td style="width: 55%"><%= product.description %></td>
-            <td style="width: 10%"><img src=<%= product.image_url %> width='100', height='100'/></td>
-            <td style="width: 10%"><%= product.price %> €</td>
-            <td style="width: 4%"><%= link_to 'Show', product %></td>
-            <td style="width: 4%"><%= link_to 'Edit', edit_product_path(product) %></td>
-            <td style="width: 4%"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-        </tbody>
-      </table>
-      <br>
-      <%= link_to 'New Product', new_product_path %>
+      <div class="row content">
+      <div class="col-sm-2 sidenav">
+        <h6>Title:</h6>
+      </div>
+      <div class="col-sm-5 sidenav">
+        <h6>Description:</h6>
+      </div>
+      <div class="col-sm-2 sidenav">
+        <h6>Image:</h6>
+      </div>
+      <div class="col-sm-1 sidenav">
+        <h6>Price:</h6>
+      </div>
+      <div class="col-sm-2 sidenav">
+      </div>
+      </div>
+      <%= render @products %>
+    </div>
+    <br>
     </div>
     <div class="col-sm-1 sidenav">
     </div>
