--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="col-sm-10 sidenav">
       <h2>New Product</h2>
-      <%= render 'form', product: @product %>
+      <%= render 'shared/form', product: @product %>
       <%= link_to 'Back', products_path %>
     </div>
     <div class="col-sm-1 sidenav">
