--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,26 +1,26 @@
 <div class="row content breadcrumb">
-  <div class="col-sm-2 sidenav">
+  <div class="col-sm-2">
     <%= product.title %>
   </div>
-  <div class="col-sm-5 sidenav">
+  <div class="col-sm-5">
     <%= product.description %>
   </div>
-  <div class="col-sm-2 sidenav">
+  <div class="col-sm-2">
     <img src=<%= product.image_url %> width='100', height='100'/>
   </div>
-  <div class="col-sm-1 sidenav">
+  <div class="col-sm-1">
     <%= product.price %> €
   </div>
-  <div class="col-sm-2 sidenav">
+  <div class="col-sm-2">
 
     <div class="row content">
-      <div class="col-sm-4 sidenav">
+      <div class="col-sm-4">
         <%= link_to 'Show', product %>
       </div>
-      <div class="col-sm-4 sidenav">
+      <div class="col-sm-4">
         <%= link_to 'Edit', edit_product_path(product) %>
       </div>
-      <div class="col-sm-4 sidenav">
+      <div class="col-sm-4">
         <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
     </div>
