--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -6,15 +6,15 @@
     <br>
   </div>
   <div class="row content">
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
-    <div class="col-sm-10 sidenav">
+    <div class="col-sm-10">
       <h2>Edit Product</h2>
       <%= render 'shared/form', product: @product %>
       <%= link_to 'Show', @product %> |
       <%= link_to 'Back', products_path %>
     </div>
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
   </div>
   <div class="row content">
