--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,35 +6,34 @@
     <br>
   </div>
   <div class="row content">
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
     <div class="col-sm-10">
       <div class="row content">
-      <div class="col-sm-2 sidenav">
-        <h6>Title:</h6>
-      </div>
-      <div class="col-sm-5 sidenav">
-        <h6>Description:</h6>
-      </div>
-      <div class="col-sm-2 sidenav">
-        <h6>Image:</h6>
-      </div>
-      <div class="col-sm-1 sidenav">
-        <h6>Price:</h6>
-      </div>
-      <div class="col-sm-2 sidenav">
-      </div>
+        <div class="col-sm-2">
+          <h6>Title:</h6>
+        </div>
+        <div class="col-sm-5">
+          <h6>Description:</h6>
+        </div>
+        <div class="col-sm-2">
+          <h6>Image:</h6>
+        </div>
+        <div class="col-sm-1">
+          <h6>Price:</h6>
+        </div>
+        <div class="col-sm-2">
+        </div>
       </div>
       <%= render @products %>
+      <%= link_to 'New Product', new_product_path %>
     </div>
     <br>
-    </div>
-    <div class="col-sm-1 sidenav">
-    </div>
   </div>
   <div class="row content">
     <br>
     <br>
-    <br>
   </div>
 </div>
+
+
