--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,14 +6,14 @@
     <br>
   </div>
   <div class="row content">
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
-    <div class="col-sm-10 sidenav">
+    <div class="col-sm-10">
       <h2>New Product</h2>
       <%= render 'shared/form', product: @product %>
       <%= link_to 'Back', products_path %>
     </div>
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
   </div>
   <div class="row content">
