--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,9 +6,9 @@
     <br>
   </div>
   <div class="row content">
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
-    <div class="col-sm-10 sidenav">
+    <div class="col-sm-10">
       <h2>Product</h2>
       <p id="notice"><%= notice %></p>
       <p>
@@ -30,7 +30,7 @@
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
     </div>
-    <div class="col-sm-1 sidenav">
+    <div class="col-sm-1">
     </div>
   </div>
   <div class="row content">
