--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="col-sm-10">
       <h2>Edit Product</h2>
-      <%= render 'shared/form', product: @product %>
+      <%= render 'form', product: @product %>
       <%= link_to 'Show', @product %> |
       <%= link_to 'Back', products_path %>
     </div>
