currency (price) formatted

--- a/app/views/catalog/_catalog.html.erb
+++ b/app/views/catalog/_catalog.html.erb
@@ -6,7 +6,7 @@
         <h5> <%= product.title %> </h5>
         <br>
           <p> <%= product.description %> </p>
-        <p><%= product.price %> €</p>
+        <p> <h6><%= number_to_currency(product.price) %> </h6></p>
       </div>
     </div>
 <hr/>
