--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -7,7 +7,7 @@
     <div class="col-sm-1">
     </div>
     <div class="col-sm-10 customFont1">
-      <%= render partial: "catalog", collection: @products, as: :product %>
+      <%= render partial: "catalog/product", collection: @products %>
     </div>
     <div class="col-sm-1">
     </div>
