--- a/app/views/catalog/_product.html.erb
+++ b/app/views/catalog/_product.html.erb
@@ -1,12 +1,19 @@
 <div class="row content">
-      <div class="col-sm-4">
-        <img src=<%= product.image_url %> width='200', height='200'/>
+  <div class="col-sm-4">
+    <img src=<%= product.image_url %> width='200', height='200'/>
+  </div>
+  <div class="col-sm-8">
+    <h5> <%= product.title %> </h5>
+    <br>
+    <p> <%= product.description %> </p>
+    <div class="row content">
+      <div class="col-sm-2">
+        <h6> <%= number_to_currency(product.price) %> </h6>
       </div>
-      <div class="col-sm-8">
-        <h5> <%= product.title %> </h5>
-        <br>
-          <p> <%= product.description %> </p>
-        <p> <h6><%= number_to_currency(product.price) %> </h6></p>
+      <div class="col-sm-10">
+        <button type="button" class="btn btn-primary btn-sm">Add to Cart</button>
       </div>
     </div>
-<hr/>
+    </div>
+  </div>
+  <hr/>
