--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%= render partial: "carts/line_item", collection: @cart.line_items %>
+
+
