--- a/app/views/catalog/_product.html.erb
+++ b/app/views/catalog/_product.html.erb
@@ -11,7 +11,7 @@
         <h6> <%= number_to_currency(product.price) %> </h6>
       </div>
       <div class="col-sm-10">
-        <button type="button" class="btn btn-primary btn-sm">Add to Cart</button>
+        <%= button_to "Add to Cart", line_items_path(product_id:product), class: "btn btn-lg btn-primary btn-sm" %>
       </div>
     </div>
     </div>
