--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,37 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid text-justify">
+  <div class="row content">
+    <br>
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-1">
+    </div>
+    <div class="col-sm-10 customFont1">
 
-<%= render partial: "carts/line_item", collection: @cart.line_items %>
+      <div class="card shopping-cart">
 
+        <div class="card-header bg-dark text-light">
+          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+          Shopping cart
+        </div>
+        <%= render partial: "carts/line_item", collection: @cart.line_items %>
+        <div class="card-footer">
+          <div class="pull-right" >
+            <a href="" class="btn btn-success pull-right btn-sm">Checkout</a>
+            <div class="pull-right" style="margin: 5px">
+              Total price: <b>50.00€</b>
+            </div>
+          </div>
+        </div>
+      </div>
 
+    </div>
+    <div class="col-sm-1">
+    </div>
+  </div>
+  <div class="row content">
+    <br>
+    <br>
+    <br>
+  </div>
+</div>
