ajax cart added

--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -12,14 +12,14 @@
     </div>
     <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
       <div class="col-3 col-sm-3 col-md-6 text-md-right" style="padding-top: 5px">
-        <h6><strong><%= number_to_currency(line_item.total_price) %> </strong></h6>
-        <span class="text-muted">x <%= line_item.quantity %></span>
+        <h6 id='totlin_<%= line_item.id %>'>$ <%= line_item.total_price %> </h6>
+        <span class="text-muted" id='quantity_<%= line_item.id %>' >x <%= line_item.quantity %></span>
       </div>
 
       <div>
-        <%= button_to "+", line_items_path(product_id: line_item.product, operation: 0), class: "btn "%>
+        <%= button_to "+", line_items_path(product_id: line_item.product, operation: 0), class: "btn ", remote: true %>
         <br>
-        <%= button_to "-", line_items_path(product_id: line_item.product, operation: 1), class: "btn "%>
+        <%= button_to "-", line_items_path(product_id: line_item.product, operation: 1), class: "btn ", remote: true %>
       </div>
 
       <div class="col-2 col-sm-2 col-md-2 text-right">
