--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -23,8 +23,8 @@
             </div>
             <div class="col-sm-6 pull-right">
               <a href="" class="btn btn-success pull-right btn-sm">Checkout</a>
-              <div class="pull-right" style="margin: 5px">
-                Total price: <b><%= number_to_currency(@cart.total_price) %> </b>
+              <div class="pull-right" style="margin: 5px" id="totalPrice">
+                Total price: $ <%= @cart.total_price %>
               </div>
             </div>
           </div>
