--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,1 +1,3 @@
-$('#line_item').html("<%=j render(@line_item) %>");
+$('#quantity_<%= @line_item.id %>').text('x <%= @line_item.quantity %>');
+$('#totlin_<%= @line_item.id %>').text('$ <%= @line_item.total_price %>');
+$('#totalPrice').text('Total price: $ <%= @cart.total_price %>');
