--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <li class="nav-item ">
       <a class="nav-link" href="#">Home</a>
     </li>
-    <li class="nav-item active">
+    <li class="nav-item">
       <a class="nav-link" href="#">Products</a>
     </li>
     <li class="nav-item">
