--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
 </head>
 
 <body>
@@ -16,25 +15,28 @@
     <p>Mission, Vission & Values</p>
   </div>
 </div>
+
+<ul class="nav">
+</ul>
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
-    <li class="nav-item ">
-      <a class="nav-link" href="#">Home</a>
+    <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
+      <a class="nav-link" href='<%=catalog_index_path%>'>Home</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Products</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Deals</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+    <li class="nav-item <%= 'active' if current_page?(products_path) %>">
+      <a class="nav-link" href='<%=products_path%>'>Products</a>
     </li>
   </ul>
+
   <ul class="navbar-nav ml-auto">
-    <a class="nav-link" href="#">Your Account</a>
+    <li class="nav-item <%= 'active' if false %>">
+      <a class="nav-link" href='#'>Account</a>
+    </li>
     <a class="navbar-separator">|</a>
-    <a class="nav-link" href="#"><span class="glyphicon glyphicon-log-in"></span>Cart</a>
+    <li class="nav-item <%= 'active' if current_page?(carts_path) %>">
+      <a class="nav-link" href='<%=carts_path%>'  > Cart </a>
+    </li>
   </ul>
 </nav>
 <%= yield %>
