--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,10 @@
   margin-bottom: 0px;
 }
 
-.customFont1 {
+.productDescription {
   font-size: 12px;
 }
 
-.customFont2 {
+.lineItemsDescription {
   font-size: 9px;
 }
