--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -6,7 +6,7 @@
   <div class="row content">
     <div class="col-sm-1">
     </div>
-    <div class="col-sm-10 customFont1">
+    <div class="col-sm-10 productDescription">
       <%= render partial: "catalog/product", collection: @products %>
     </div>
     <div class="col-sm-1">
