--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,7 +6,7 @@
   <div class="row content">
     <div class="col-sm-1">
     </div>
-    <div class="col-sm-10 customFont1">
+    <div class="col-sm-10">
 
       <div class="card shopping-cart">
 
