--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
       <h5 class="product-name"><strong><%= line_item.product.title %></strong></h5>
-      <h4 class="customFont2 text-justify">
+      <h4 class="lineItemsDescription text-justify">
         <%= line_item.product.description %>
       </h4>
     </div>
