--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
   <title>Show all products</title>
 <% end %>
-<div class="container-fluid text-justify customFont1">
+<div class="container-fluid text-justify productDescription">
   <div class="row content">
     <br>
   </div>
