--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,27 +18,8 @@
 
 <ul class="nav">
 </ul>
+<%= render partial: "layouts/navbar" %>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <ul class="navbar-nav">
-    <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
-      <a class="nav-link" href='<%= catalog_index_path %>'>Home</a>
-    </li>
-    <li class="nav-item <%= 'active' if current_page?(products_path) %>">
-      <a class="nav-link" href='<%= products_path %>'>Products</a>
-    </li>
-  </ul>
-
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item <%= 'active' if false %>">
-      <a class="nav-link" href='#'>Account</a>
-    </li>
-    <a class="navbar-separator">|</a>
-    <li class="nav-item <%= 'active' if request.fullpath.start_with?('/carts') %>">
-      <a class="nav-link" href='<%= carts_path %>' id="cartLink"> Cart </a>
-    </li>
-  </ul>
-</nav>
 <%= yield %>
 </body>
 </html>
