--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,22 @@
-<h1>New Order</h1>
-
-<%= render 'form', order: @order %>
-
-<%= link_to 'Back', orders_path %>
+<% content_for :head do %>
+  <title>New Order</title>
+<% end %>
+<div class="container-fluid text-justify productDescription">
+  <div class="row content">
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-8">
+      <h2>New Order</h2>
+      <%= render 'form', order: @order %>
+      <%= link_to 'Back', carts_path %>
+    </div>
+    <div class="col-sm-2">
+    </div>
+  </div>
+  <div class="row content">
+    <br>
+  </div>
+</div>
