--- a/app/views/order_mailer/received.text.erb
+++ b/app/views/order_mailer/received.text.erb
@@ -6,4 +6,4 @@ You ordered the following items:
 
 <%= render @order.line_items %>
 
-We'll send you a separate e-mail when your order ships
+We'll send you a separate e-mail when your order ships.
