--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,33 +1,42 @@
-<p id="notice"><%= notice %></p>
+<% content_for :head do %>
+  <title>Show all orders</title>
+<% end %>
+<div class="container-fluid text-justify productDescription">
+  <div class="row content">
+    <br>
+  </div>
+  <div class="row content">
+    <div class="col-sm-1">
+    </div>
+    <div class="col-sm-10">
 
-<h1>Orders</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Email</th>
-      <th> paytype</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.name %></td>
-        <td><%= order.address %></td>
-        <td><%= order.email %></td>
-        <td><%= order. pay_type %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Order', new_order_path %>
+      <div class="row content">
+        <div class="col-sm-1">
+          <h6>ID:</h6>
+        </div>
+        <div class="col-sm-2">
+          <h6>Name:</h6>
+        </div>
+        <div class="col-sm-3">
+          <h6>Address:</h6>
+        </div>
+        <div class="col-sm-3">
+          <h6>E-Mail:</h6>
+        </div>
+        <div class="col-sm-2">
+          <h6>Pay_Type:</h6>
+        </div>
+        <div class="col-sm-2">
+        </div>
+      </div>
+      <%= render @orders %>
+    </div>
+    <div class="col-sm-1">
+    </div>
+    <br>
+  </div>
+  <div class="row content">
+    <br>
+    <br>
+  </div>
+</div>
