--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -24,7 +24,7 @@
           <h6>E-Mail:</h6>
         </div>
         <div class="col-sm-2">
-          <h6>Pay_Type:</h6>
+          <h6>Payment:</h6>
         </div>
         <div class="col-sm-2">
         </div>
