--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <title>Create user</title>
 <% end %>
 
-<div class="container-fluid text-justify productDescription">
+<div class="container-fluid text-justify">
 
   <div class="row content">
     <br>
