--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,34 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
-      <a class="nav-link" href='<%= catalog_index_path %>'>Home</a>
+      <a class="nav-link" href='<%= catalog_index_path %>'>Store</a>
     </li>
-    <li class="nav-item <%= 'active' if current_page?(products_path) %>">
-      <a class="nav-link" href='<%= products_path %>'>Products</a>
-    </li>
-    <li class="nav-item <%= 'active' if current_page?(orders_path) %>">
-      <a class="nav-link" href='<%= orders_path %>'>Orders</a>
-    </li>
-  </ul>
-
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item <%= 'active' if false %>">
-      <a class="nav-link" href='#'>Account</a>
-    </li>
-    <a class="navbar-separator">|</a>
     <li class="nav-item <%= 'active' if request.fullpath.start_with?('/carts') %>">
       <a class="nav-link" href='<%= carts_path %>' id="cartLink"> Cart </a>
     </li>
+    <a class="navbar-separator">|</a>
+    <!--    restricted access-->
+    <% if session[:user_id] %>
+      <li class="nav-item <%= 'active' if current_page?(products_path) %>">
+        <a class="nav-link" href='<%= products_path %>'>Products</a>
+      </li>
+      <li class="nav-item <%= 'active' if current_page?(orders_path) %>">
+        <a class="nav-link" href='<%= orders_path %>'>Orders</a>
+      </li>
+      <li class="nav-item <%= 'active' if current_page?(users_path) %>">
+        <a class="nav-link" href='<%= users_path %>'>Users</a>
+      </li>
+    <% end %>
+  </ul>
+
+  <!--right side menu-->
+  <ul class="navbar-nav ml-auto">
+    <% if session[:user_id] %>
+      <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %>
+    <% else %>
+      <li class="nav-item">
+        <a class="nav-link" href='<%= login_url %>'>Account</a>
+      </li>
+    <% end %>
   </ul>
 </nav>
