--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,20 @@
 .lineItemsDescription {
   font-size: 9px;
 }
+
+//html {
+//  position: relative;
+//  min-height: 100%;
+//}
+//
+//.footer {
+//  position: absolute;
+//  left: 0;
+//  bottom: 0;
+  //width: 100%;
+  //height: 60px;
+  //line-height: 60px;
+  //background-color: grey;
+  //color: white;
+  //text-align: center;
+//}
