--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -2,6 +2,8 @@
   <%= form.text_field :name %>
   <%= form.text_area :address %>
   <%= form.email_field :email %>
-  <%= form.select :pay_type, Order.pay_types.keys, prompt: 'Select a payment method' %>
-  <%= form.submit 'Place Order'%>
+
+  <%#= form.label t('.payment') %>
+  <%= form.select :pay_type, Order.pay_types.keys, prompt: t('.selectPay') %>
+  <%= form.submit t('.submit')%>
 <% end %>
