--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,5 @@
-<% content_for :head do %>
-  <title>Show all products</title>
-<% end %>
+<% content_for :head, 'Products' %>
+
 <div class="container-fluid text-justify productDescription">
   <div class="row content">
     <br>
