--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,4 @@
-<% content_for :head do %>
-  <title>Show all users</title>
-<% end %>
+<% content_for :head, 'Users' %>
 
 <!--heading-->
 <div class="container-fluid text-justify">
