--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 <script src="https://use.fontawesome.com/c560c025cf.js"></script>
 
-<!--header-->
+<!--common header-->
 <div class="jumbotron">
   <div class="container text-center">
     <h1>Online Store</h1>
@@ -29,18 +29,13 @@
 <!--customized content-->
 <%= yield %>
 
-<!--footer-->
-<!--<footer class="page-footer font-small bg-secondary">-->
-<!--  <div class="container text-center">-->
-<!--    <p>Course work SS2018</p>-->
-<!--  </div>-->
-<!--</footer>-->
-<wrapper class="d-flex flex-column">
-  <footer class="container-fluid w-100 bg-dark text-light py-3">
-    <p>
-      why is there still a white space below???
-    </p>
-  </footer>
-</wrapper>
+<!--common footer-->
+<footer class="container-fluid text-center">
+  <p>
+    Vindimian & Loparev
+    <br>
+    SoSe 2018
+  </p>
+</footer>
 </body>
 </html>
