--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,7 @@
 <script src="https://use.fontawesome.com/c560c025cf.js"></script>
 
 <!--common header-->
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Online Store</h1>
-    <p>Mission, Vission & Values</p>
-  </div>
-</div>
+<%= render partial: "layouts/carusel" %>
 
 <!--menu bar-->
 <%= render partial: "layouts/navbar" %>
