--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,29 @@ footer {
   bottom: 0px;
 }
 
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+
 .carousel-inner img {
   width: 100%;
   height: 100%;
+
 }
+
+//div#demo {
+//  width: 100%;
+//  padding-bottom: 55%;
+//  position: relative;
+//}
+//
+//.carousel-inner > div#demo {
+//  position: absolute;
+//  top: 0; bottom: 0; left: 0; right: 0;
+//}
