--- a/app/views/layouts/_carusel.html.erb
+++ b/app/views/layouts/_carusel.html.erb
@@ -1,27 +1,34 @@
-<div class="container">
-  <div id="demo" class="carousel slide" data-ride="carousel">
+<div id="demo" class="carousel slide" data-ride="carousel">
 
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-      <li data-target="#demo" data-slide-to="0" class="active"></li>
-      <li data-target="#demo" data-slide-to="1"></li>
-      <li data-target="#demo" data-slide-to="2"></li>
-    </ul>
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/content/cowboy-hats-3265977_1920.jpg" alt="Hats" style="width:100%">
-    </div>
-
-    <div class="carousel-item">
-      <img src="/content/shoes-2060519_1920.jpg" alt="Shoes" width="1100" height="500">
-    </div>
-
-    <div class="carousel-item">
-      <img src="content/vintage-1465346_1920.jpg" alt="Vintage" width="1100" height="500">
+      <img src="assets/cowboy-hats-3265977_1920.jpg" alt="Hats">
       <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+        <h3>Like a Cowboy</h3>
+        <p>Master the element!</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/shoes-2060519_1920.jpg" alt="Shoes">
+      <div class="carousel-caption">
+        <h3>Like a Rainbow</h3>
+        <p>Colors for everyone!</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/vintage-1465346_1920.jpg" alt="Vintage">
+      <div class="carousel-caption">
+        <h3>Like a Boss</h3>
+        <p>Exclusive collection!</p>
       </div>
     </div>
   </div>
@@ -33,5 +40,4 @@
   <a class="carousel-control-next" href="#demo" data-slide="next">
     <span class="carousel-control-next-icon"></span>
   </a>
-  </div>
 </div>
