--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
+      <a class="nav-link" href='<%= catalog_index_path %>'><%= t('.home') %></a>
+    </li>
+    <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
       <a class="nav-link" href='<%= catalog_index_path %>'><%= t('.store') %></a>
     </li>
     <li class="nav-item <%= 'active' if request.fullpath.start_with?('/carts') %>">
