--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,12 +30,12 @@
 <%= yield %>
 
 <!--common footer-->
-<footer class="container-fluid text-center">
+<div class="footer">
   <p>
     Vindimian & Loparev
     <br>
     SoSe 2018
   </p>
-</footer>
+</div>
 </body>
 </html>
