--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,3 +49,8 @@ body {
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
+.carousel-inner {
+  width:100%;
+  max-height: 30vh !important;
+}
+
