--- a/app/views/layouts/_carusel.html.erb
+++ b/app/views/layouts/_carusel.html.erb
@@ -1,4 +1,4 @@
-<div id="demo" class="carousel slide" data-ride="carousel">
+<div id="demo" class="carousel slide w-100 mx-auto" data-ride="carousel">
 
   <!-- Indicators -->
   <ul class="carousel-indicators">
@@ -7,32 +7,22 @@
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
 
+  <!--  pics-->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/cowboy-hats-3265977_1920.jpg" alt="Hats">
-      <div class="carousel-caption">
-        <h3>Like a Cowboy</h3>
-        <p>Master the element!</p>
-      </div>
+      <img class="img-fluid" src="assets/cowboy-hats-3265977_1920.jpg" alt="Hats">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/shoes-2060519_1920.jpg" alt="Shoes">
-      <div class="carousel-caption">
-        <h3>Like a Rainbow</h3>
-        <p>Colors for everyone!</p>
-      </div>
+      <img class="img-fluid" src="assets/shoes-2060519_1920.jpg" alt="Shoes">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/vintage-1465346_1920.jpg" alt="Vintage">
-      <div class="carousel-caption">
-        <h3>Like a Boss</h3>
-        <p>Exclusive collection!</p>
-      </div>
+      <img class="d-block w-100 h-100" src="assets/vintage-1465346_1920.jpg" alt="Vintage">
     </div>
   </div>
 
+  <!--  ctrl arrows-->
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
