--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
-    <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
-      <a class="nav-link" href='<%= catalog_index_path %>'><%= t('.home') %></a>
+    <li class="nav-item <%= 'active' if request.fullpath.starts_with?('/home') %>">
+      <a class="nav-link" href='<%= home_path %>'><%= t('.home') %></a>
     </li>
     <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
       <a class="nav-link" href='<%= catalog_index_path %>'><%= t('.store') %></a>
