bilingual home with carousel

--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -10,15 +10,15 @@
   <!--  pics-->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img-fluid" src="assets/cowboy-hats-3265977_1920.jpg" alt="Hats">
+      <img class="img-fluid" src="assets/shoes-970354_1920.jpg" alt="Friends">
     </div>
 
     <div class="carousel-item">
-      <img class="img-fluid" src="assets/shoes-2060519_1920.jpg" alt="Shoes">
+      <img class="img-fluid" src="assets/car-1209334_1920.jpg" alt="Home">
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100 h-100" src="assets/vintage-1465346_1920.jpg" alt="Vintage">
+      <img class="d-block w-100 h-100" src="assets/rain-122691_1920.jpg" alt="Rain">
     </div>
   </div>
 
