carousel with image_tag

--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -10,16 +10,15 @@
   <!--  pics-->
   <div class="carousel-inner">
     <div class="carousel-item active">
-<!--      <img class="img-fluid" src="assets/shoes-970354_1920.jpg" alt="Friends">-->
-      <%= image_tag("shoes-970354_1920.jpg", alt: "Friends") %>
+      <%= image_tag("shoes-970354_1920.jpg", alt: "Friends", class: "img-fluid") %>
     </div>
 
     <div class="carousel-item">
-      <%= image_tag("car-1209334_1920.jpg", alt: "Home") %>
+      <%= image_tag("car-1209334_1920.jpg", alt: "Home", class: "img-fluid") %>
     </div>
 
     <div class="carousel-item">
-      <%= image_tag("rain-122691_1920.jpg", alt: "Rain") %>
+      <%= image_tag("rain-122691_1920.jpg", alt: "Rain", class: "img-fluid") %>
     </div>
   </div>
 
