--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <script src="https://use.fontawesome.com/c560c025cf.js"></script>
 
 <!--carousel or header-->
-<%= if request.fullpath.starts_with?('/home')
+<%= if request.fullpath.starts_with?('/about')
       render partial: "layouts/carousel"
     else
       render partial: "layouts/jumbo"
