--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,9 +4,9 @@
     <div class="col-sm-3"></div>
     <div class="col-sm-6">
       <%= if I18n.locale == :de
-            render partial: "pages/home_de"
+            render partial: "pages/about_de"
           else
-            render partial: "pages/home_en"
+            render partial: "pages/about_en"
           end %>
     </div>
     <div class="col-sm-3"></div>
