about page integrationstest

--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -8,7 +8,7 @@
   </ul>
 
   <!--  pics-->
-  <div class="carousel-inner">
+  <div class="carousel-inner" id="carousel">
     <div class="carousel-item active">
       <%= image_tag("shoes-970354_1920.jpg", alt: "Friends", class: "img-fluid") %>
     </div>
