--- a/app/views/pages/_about_de.html.erb
+++ b/app/views/pages/_about_de.html.erb
@@ -1,24 +1,27 @@
-<section class="w3-container w3-center w3-content" style="max-width: 600px">
-  <h2 class="w3-wide">DIE BAND</h2>
-  <p class="w3-opacity"><i>
-    Wir lieben Kuchen
-  </i></p>
-</section>
-<p>
-  Deutsches Ipsum Dolor sit amet, Milchreis adipiscing elit, sed do eiusmod Zeitgeist incididunt ut labore et dolore
-  Faust aliqua. Ut enim ad minim Zauberer quis nostrud exercitation ullamco laboris Sprechen Sie deutsch ut aliquip ex
-  ea commodo genau Duis aute irure dolor in Hochzeit in voluptate velit esse cillum Umsatzanalyse eu fugiat nulla
-  pariatur. Excepteur Kindergarten occaecat cupidatat non proident, sunt Erbsenzähler culpa qui officia deserunt mollit
-  Lebkuchen id est laborum
-</p>
-<p>
-  deserunt dissentias has Ich habe fertig Tollit argumentum ius an. Saepe bitte elaboraret per ne, nam eu Herr Doktor
-  pertinax, impetus eripuit aliquando no Ampelmännchen Diam scripserit no vis, eos Fußball suscipit ea. Eam ea offendit
-  Reise ad blandit voluptatibus sed, ad Mozart consul sanctus vix. Cu quas Angela Merkel veritus vim
-</p>
-<p>
-  id latine indoctum complectitur Helmut Kohl mea meliore denique nominavi id. Schnaps expetenda nam an, his ei Bildung
-  euismod assentior. Odio principes iracundia Knappwurst pri. Ut vel solum mandamus, Heisenberg natum adversarium ei
-  ius, diam Lebkuchen honestatis eum no
-  sweet.
-</p>
+<h2 id="about_title">DIE BAND</h2>
+<p id="about_subtitle"><i>
+  Wir lieben Kuchen
+</i></p>
+<div id="about_description">
+  <p>
+    Deutsches Ipsum Dolor sit amet, Milchreis adipiscing elit, sed do eiusmod Zeitgeist incididunt ut labore et dolore
+    Faust aliqua. Ut enim ad minim Zauberer quis nostrud exercitation ullamco laboris Sprechen Sie deutsch ut aliquip ex
+    ea commodo genau Duis aute irure dolor in Hochzeit in voluptate velit esse cillum Umsatzanalyse eu fugiat nulla
+    pariatur. Excepteur Kindergarten occaecat cupidatat non proident, sunt Erbsenzähler culpa qui officia deserunt
+    mollit
+    Lebkuchen id est laborum
+  </p>
+  <p>
+    deserunt dissentias has Ich habe fertig Tollit argumentum ius an. Saepe bitte elaboraret per ne, nam eu Herr Doktor
+    pertinax, impetus eripuit aliquando no Ampelmännchen Diam scripserit no vis, eos Fußball suscipit ea. Eam ea
+    offendit
+    Reise ad blandit voluptatibus sed, ad Mozart consul sanctus vix. Cu quas Angela Merkel veritus vim
+  </p>
+  <p>
+    id latine indoctum complectitur Helmut Kohl mea meliore denique nominavi id. Schnaps expetenda nam an, his ei
+    Bildung
+    euismod assentior. Odio principes iracundia Knappwurst pri. Ut vel solum mandamus, Heisenberg natum adversarium ei
+    ius, diam Lebkuchen honestatis eum no
+    sweet.
+  </p>
+</div>
