--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item <%= 'active' if current_page?(catalog_index_path) %>">
-      <a class="nav-link" href='<%= catalog_index_path %>'><%= t('.store') %></a>
+      <a class="nav-link" id="store_navbar" href='<%= catalog_index_path %>'><%= t('.store') %></a>
     </li>
     <li class="nav-item <%= 'active' if request.fullpath.start_with?('/carts') %>">
-      <a class="nav-link" href='<%= carts_path %>' id="cartLink"><%= t('.cart') %></a>
+      <a class="nav-link" id="cart_navbar" href='<%= carts_path %>' id="cartLink"><%= t('.cart') %></a>
     </li>
     <li class="nav-item <%= 'active' if request.fullpath.starts_with?('/about') %>">
-      <a class="nav-link" href='<%= about_path %>'><%= t('.about') %></a>
+      <a class="nav-link" id="about_navbar" href='<%= about_path %>'><%= t('.about') %></a>
     </li>
     <a class="navbar-separator">|</a>
     <!--restricted access for admin without translation-->
