--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,5 @@
-<% content_for :head do %>
-  <title>Show product</title>
-<% end %>
+<% content_for :head, 'Show product' %>
+
 <div class="container-fluid text-justify productDescription">
   <div class="row content">
     <br>
