--- a/app/views/order_mailer/seller.text.erb
+++ b/app/views/order_mailer/seller.text.erb
@@ -1,5 +1,5 @@
 You received a new order from: <%= @order.name %>
-Adress: <%= @order.address %>
+Address: <%= @order.street %>, <%= @order.street_number %>. <%= @order.city %>, <%= @order.zip_code %> <%= @order.country %>.
 E-mail: <%= @order.email %>
 
 Order ID: <%= @order.id %>
