--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -6,7 +6,7 @@
     <%= order.name %>
   </div>
   <div class="col-sm-3">
-    <%= order.address %>
+    <%= order.street %>, <%= order.street_number %> (<%= order.city %>)
   </div>
   <div class="col-sm-3">
     <%= order.email %>
