--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,6 +1,11 @@
 <%= bootstrap_form_with model: order, local: true do |form| %>
   <%= form.text_field :name %>
-  <%= form.text_area :address %>
+  <%= form.text_field :street %>
+  <%= form.text_field :street_number %>
+  <%= form.text_field :city %>
+  <%= form.text_field :state %>
+  <%= form.text_field :zip_code %>
+  <%= form.text_field :country %>
   <%= form.email_field :email %>
   <%= form.select :pay_type, Order.pay_types.keys, prompt: t('.selectPay') %>
   <%= form.submit t('.submit')%>
