--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,34 +1,49 @@
-<%= form_for(@order) do |f| %>
-
-  <%= f.label :name %>
-  <%= f.text_field :name, class: 'form-control' %>
-<br>
-  <div id="locationField">
-    <input id="autocomplete" placeholder="Enter your address"
-           onFocus="geolocate()" type="text"></input>
-  </div>
-  <%= f.label :street %>
-  <%= f.text_field :street, class: 'form-control', disabled: 'true', id:'route' %>
-  <%= f.label :street_number %>
-  <%= f.text_field :street_number, class: 'form-control', disabled: 'true', id:'street_number' %>
-  <%= f.label :city %>
-  <%= f.text_field :city, class: 'form-control', disabled: 'true', id:'locality' %>
-  <%= f.label :state %>
-  <%= f.text_field :state, class: 'form-control', disabled: 'true', id:'administrative_area_level_1' %>
-  <%= f.label :zip_code %>
-  <%= f.text_field :zip_code, class: 'form-control', disabled: 'true', id:'postal_code'%>
-  <%= f.label :country %>
-  <%= f.text_field :country, class: 'form-control', disabled: 'true', id:'country' %>
-
-  <%= f.label :email %>
-  <%= f.email_field :email, class: 'form-control' %>
-  <%= f.label :pay_type %>
-  <%= f.select :pay_type, Order.pay_types.keys %>
-
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-<% end %>
-
-
+<div class="form-area">
+  <%= form_for(@order) do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+    <br>
+    <div id="locationField">
+      <input id="autocomplete" class="form-control" placeholder="Enter your address"
+             onFocus="geolocate()" type="text"></input>
+    </div>
+    <br>
+    <div class="form-row">
+      <div class="col-sm-8">
+        <%= f.label :street %>
+        <%= f.text_field :street, class: 'form-control', id: 'route', readonly: true %>
+      </div>
+      <div class="col-sm-4">
+        <%= f.label :street_number %>
+        <%= f.text_field :street_number, class: 'form-control', id: 'street_number', readonly: true %>
+      </div>
+    </div>
+    <%= f.label :city %>
+    <%= f.text_field :city, class: 'form-control', id: 'locality', readonly: true %>
+    <div class="form-row">
+      <div class="col-sm-8">
+        <%= f.label :state %>
+        <%= f.text_field :state, class: 'form-control', id: 'administrative_area_level_1', readonly: true %>
+      </div>
+      <div class="col-sm-4">
+        <%= f.label :zip_code %>
+        <%= f.text_field :zip_code, class: 'form-control', id: 'postal_code', readonly: true %>
+      </div>
+    </div>
+    <%= f.label :country %>
+    <%= f.text_field :country, class: 'form-control', id: 'country', readonly: true %>
+    <br>
+    <%= f.label :email %>
+    <%= f.email_field :email, class: 'form-control' %>
+    <br>
+    <%= f.label :pay_type %>
+    <%= f.select :pay_type, Order.pay_types.keys %>
+    <br>
+    <br>
+    <%= f.submit yield(:button_text), class: "btn btn-primary pull-right", value: "Submit" %>
+    <%= button_to "Back", carts_path, class: "btn btn-danger" %>
+  <% end %>
+</div>
 
 <script>
     var placeSearch, autocomplete;
@@ -56,7 +71,6 @@
     function fillInAddress() {
         // Get the place details from the autocomplete object.
         var place = autocomplete.getPlace();
-        window.alert(place.address_components[0].types[0]);
         for (var component in componentForm) {
             document.getElementById(component).value = '';
         }
@@ -76,7 +90,7 @@
     // as supplied by the browser's 'navigator.geolocation' object.
     function geolocate() {
         if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function(position) {
+            navigator.geolocation.getCurrentPosition(function (position) {
                 var geolocation = {
                     lat: position.coords.latitude,
                     lng: position.coords.longitude
@@ -90,7 +104,5 @@
         }
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=-HIER DIE APIKEY FEHLT-&libraries=places&callback=initAutocomplete"
+<script src="https://maps.googleapis.com/maps/api/js?key=ES FEHL DIE KEY&libraries=places&callback=initAutocomplete"
         async defer></script>
-</body>
-</html>
