--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,9 +1,7 @@
-<%= render 'errors' %>
 <div class="form-area">
-  <%= form_for(@order) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
+  <%= bootstrap_form_with model: order, local: true do |f| %>
     <br>
+    <%= f.text_field :name, class: 'form-control' %>
     <div id="locationField">
       <input id="autocomplete" class="form-control" placeholder="Enter your address"
              onFocus="geolocate()" type="text"></input>
@@ -11,38 +9,27 @@
     <br>
     <div class="form-row">
       <div class="col-sm-8">
-        <%= f.label :street %>
         <%= f.text_field :street, class: 'form-control', id: 'route', readonly: true %>
       </div>
       <div class="col-sm-4">
-        <%= f.label :street_number %>
         <%= f.text_field :street_number, class: 'form-control', id: 'street_number', readonly: true %>
       </div>
     </div>
-    <%= f.label :city %>
     <%= f.text_field :city, class: 'form-control', id: 'locality', readonly: true %>
     <div class="form-row">
       <div class="col-sm-8">
-        <%= f.label :state %>
         <%= f.text_field :state, class: 'form-control', id: 'administrative_area_level_1', readonly: true %>
       </div>
       <div class="col-sm-4">
-        <%= f.label :zip_code %>
         <%= f.text_field :zip_code, class: 'form-control', id: 'postal_code', readonly: true %>
       </div>
     </div>
-    <%= f.label :country %>
     <%= f.text_field :country, class: 'form-control', id: 'country', readonly: true %>
-    <br>
-    <%= f.label :email %>
     <%= f.email_field :email, class: 'form-control' %>
-    <br>
-    <%= f.label :pay_type %>
     <%= f.select :pay_type, Order.pay_types.keys %>
     <br>
-    <br>
-    <%= f.submit yield(:button_text), class: "btn btn-primary pull-right", value: "Submit" %>
-    <%= button_to "Back", carts_path, class: "btn btn-danger" %>
+    <%= f.submit yield(:button_text), remote: true, class: "btn btn-primary pull-right", value: "Submit", id: "bbb" %>
   <% end %>
+  <%= button_to "Back", catalog_index_path, class: "btn btn-danger" %>
   <%= javascript_include_tag google_maps_api %>
 </div>
