--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -9,8 +9,8 @@
     </div>
     <div class="col-sm-10">
 
-      <div class="row content">
-        <div class="col-sm-1">
+      <div class="row content breadcrumb">
+        <div class="col-sm-2">
           <h6>ID:</h6>
         </div>
         <div class="col-sm-2">
@@ -19,13 +19,13 @@
         <div class="col-sm-3">
           <h6>Address:</h6>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <h6>E-Mail:</h6>
         </div>
         <div class="col-sm-2">
           <h6>Payment:</h6>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
         </div>
       </div>
       <%= render @orders %>
