--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="col-sm-10">
 
-      <div class="row content">
+      <div class="row content breadcrumb">
         <div class="col-sm-2">
           <h6>Title:</h6>
         </div>
