--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 
     <div class="col-sm-10">
 
-      <div class="row content">
+      <div class="row content breadcrumb">
         <div class="col-sm-12">
           <h6>Name:</h6>
         </div>
